--- a/leaderboard.yml
+++ b/leaderboard.yml
@@ -2,6 +2,10 @@
 easy:
 - - Jammy Didgeridoo
   - 136.7
+- - Scarramoosh
+  - 182.978
+- - Crunchy Fish Taco
+  - 186.034
 - - Secret Potato
   - 249
 - - Mr Pickles
